Fix work description width on small screens

--- a/styles.css
+++ b/styles.css
@@ -802,6 +802,9 @@ textarea:focus {
     .first-work img {
         width: 85vw;
     }
+    #work .container .description {
+        width: 80vw;
+    }
     
 } 
 
